tests/errors/erro_while_scope.lua
function void main()
    while true do
        local y : integer = 5;
        print(y);
    end
    -- Uso fora do bloco deve falhar
    print(y);
end
